--- a/_posts/2019-12-24-the-us-narrative-today.html
+++ b/_posts/2019-12-24-the-us-narrative-today.html
@@ -1765,107 +1765,107 @@ stories:
   domain: http://www.nevadabusiness.com/
   link: https://www.nevadabusiness.com/2019/12/better-business-bureau-of-southern-nevada-hosts-toy-drive-for-injured-police-officers-fund/
 images:
-- name: abandonedbuildings_satan_red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_satan_red.jpg
-- name: legal-statue-legalstatue-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-blue-electricity.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-smooth-ride.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-smooth-ride.png
-- name: la-muse-border-crossing-through-fence.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-border-crossing-through-fence.jpg
-- name: old-door-lock-old-door-lock-2-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-emily-carr.jpg
-- name: oldsmallboat-oldsmallboat-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-bright-sand.jpg
-- name: nazi-invasion-british-guards-marching.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-british-guards-marching.jpg
-- name: dc-statue-dcstatue-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-sunday.jpg
-- name: stalin-time-city-waterfront-path.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-city-waterfront-path.jpg
-- name: beach-rocks-beach-rocks-currents-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-marcel-duchamp.jpg
-- name: la-muse-butterfly-on-flower.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-butterfly-on-flower.jpg
-- name: mosaic-face-mosaic-face-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-creativity.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-clean-view.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-clean-view.png
-- name: powerlines-power-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-crabapple.jpg
-- name: old-church-oldchurch-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-purple-storm.jpg
-- name: rockingchair-rockingchair-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-sunday.jpg
-- name: liberty-back-statue-liberty-back-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-colored-circuits.jpg
-- name: school-clouds-church-clouds-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-copper-circuit-2.jpg
-- name: bf-skinner-hotel-down-sidewalk.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-hotel-down-sidewalk.jpg
-- name: oldcabin-oldcabin-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-diego-rivera1.jpg
-- name: oldcabin-oldcabin-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-hot-spicy.jpg
-- name: gypsymosaic-gypsy-eyes-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-dali-two.jpg
-- name: aws-s3-square-77-33-800-500-0-max-0--5--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-77-33-800-500-0-max-0--5--1.jpg
-- name: rain-princess-astoria-bridge-columbia.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-astoria-bridge-columbia.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-pablo-blue.jpg
-- name: bf-skinner-sunflower-big-green.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-sunflower-big-green.jpg
-- name: birdhouse-birdhouse-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-satan-red.jpg
-- name: wind-mills-windmills-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-alien-goggles.jpg
-- name: beach-rocks-beach-rocks-currents-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-matrix.jpg
-- name: rockingchair-face-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-gan-vogh.jpg
-- name: braceros-domingo-ulloa-cemetery_36690406946_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-cemetery_36690406946_o.jpg
-- name: copper-circuit-cemetery_36690406946_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-cemetery_36690406946_o.jpg
-- name: oldhouse-oldhouse-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-dali-three.jpg
-- name: old-church-oldchurch-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-colorful-dream.jpg
-- name: crow_matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_matrix.jpg
-- name: beach-rocks-beach-rocks-currents-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-blue-electricity.jpg
-- name: locked-up-steam-lock-up-steam-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-marcel-duchamp.jpg
-- name: oldtrain-oldtrain-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-dali-three.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-ww2-color.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-ww2-color.JPG
-- name: death-valley-death-valley-national-park-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-colored-circuits.jpg
-- name: curtain-curtain-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-cinnamon-rolls.jpg
-- name: san-francisco-street-view-san-francisco-street-view-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-green-zuma.jpg
-- name: berlinwall-DSC-0084-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-light-dali.jpg
-- name: aws-s3-stories-catacombs-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-catacombs-blue-circuit-3.jpg
-- name: nazi-invasion-statue-architecture-holding.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-statue-architecture-holding.jpg
-- name: bf-skinner-dark-hallway-in-hotel.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-dark-hallway-in-hotel.jpg
-- name: nyc-flag-api-conversations-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-api-conversations-alien-goggles.jpg
-- name: copper-circuit-working-waterfront-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-working-waterfront-2.jpg
-- name: power-lines-power-lines-empty-space-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-really-hot.jpg
-- name: liberty-back-statue-liberty-back-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-plentiful.jpg
+- name: statue-face-open-mouth-statue-face-open-mouth-atari-asteroids.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-atari-asteroids.png
+- name: stalin-time-grafitti-woman-bangs.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-grafitti-woman-bangs.jpg
+- name: oldhousecars-house-old-cars-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-clean-view.jpg
+- name: old-house-oldhouse-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-alberto-giacometti.jpg
+- name: downtheline-downtheline-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-blue-brush.jpg
+- name: store-on-corner-oldcabin-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-atari-missle.jpg
+- name: copper-circuit-city-vancouver-clouds.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-city-vancouver-clouds.jpg
+- name: lincoln-memorial-lincolnmemorial-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-crabapple.jpg
+- name: miamibeach-miamibeach-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-crafty-painting.jpg
+- name: nyc-flag-nycflag-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-spagetti-accident.jpg
+- name: aws-s3-stories-new-79-110-800-500-0-max-0--5--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-79-110-800-500-0-max-0--5--1.jpg
+- name: bf-skinner-old-building-and-cars_36680898846_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-old-building-and-cars_36680898846_o.jpg
+- name: copper-circuit-border-crossing-through-fence.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-border-crossing-through-fence.jpg
+- name: old-cabin-oldcabin-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-pablo-blue.jpg
+- name: machine-road-machine-road-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-atari-asteroids.jpg
+- name: mosaic-face-mosaic-face-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-blue-electricity.jpg
+- name: stalin-time-washington-monument-afar.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-washington-monument-afar.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-horiz-circuit.jpg
+- name: stalin-time-city-clouds-waterfront.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-city-clouds-waterfront.jpg
+- name: amusement-park-amusement-park-2-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-diego-rivera1.jpg
+- name: nazi-invasion-DSC_0020.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-DSC_0020.jpg
+- name: carry-load-carryload-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-gan-vogh.jpg
+- name: blossombar-sunday-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-sunday-file-00-00-50-62.jpg
+- name: abandonedbuildings_crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_crabapple.jpg
+- name: oldroad-old-road-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-purple-pond.jpg
+- name: bluelake-hot-spicy-file-00-01-17-38.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-hot-spicy-file-00-01-17-38.jpg
+- name: crow_dark_rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_dark_rain.jpg
+- name: capital-battle-capitolbattle-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-really-hot.jpg
+- name: oldcabin-store-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-gred-mash.jpg
+- name: window-window-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-sand-paper.jpg
+- name: paris-paris-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-purple-storm.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-smoking-cigarette.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-smoking-cigarette.JPG
+- name: oldhotel-oldhotel-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-smooth-ride.jpg
+- name: beach-rocks-beach-rocks-currents-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-copper-circuit-2.jpg
+- name: statue-face-open-mouth-statue-face-open-mouth-clean-view.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-clean-view.png
+- name: dragon-desert-desert-dragon-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-light-dali.jpg
+- name: nazi-invasion-IMG_7054.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_7054.jpg
+- name: border-fence-border-fence-on-hill-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-crabapple.jpg
+- name: downtown-los-angeles-downtown-la-ww2-dresden.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-ww2-dresden.JPG
+- name: oldcabin-store-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-sand-paper.jpg
+- name: hollywood-building-hollywood-building-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-pablo-blue.jpg
+- name: bf-skinner-docks-big-cosco-ship.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-docks-big-cosco-ship.jpg
+- name: file-00-00-21-82.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/file-00-00-21-82.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-pablo-blue.jpg
+- name: containership-containership-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-spagetti-accident.jpg
+- name: downtown-los-angeles-downtown-la-crunch-paper.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-crunch-paper.JPG
+- name: stories-yuma-downtown.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-yuma-downtown.jpg
+- name: wind-mills-windmills-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-blue-brush.jpg
+- name: mediterranean-mediterranean-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-green-zuma.jpg
+- name: sand-hand-sand-hand-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-colored-circuits.jpg
+- name: oldtrain-oldtrain-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-free-woman.jpg
 ---
 Six Things Latina Moms Say That Can Get You Through Anything.&nbsp;Bushko To Join Fairmont State Soccer Program.&nbsp;China, Japan Stocks Lower On Christmas.&nbsp;Americas Top Dog Model Announces Local Contest Winner.&nbsp;Offensive Player Of The Year.&nbsp;Vikings Have Many Questions To Answer In Wake Of Mondays Loss.&nbsp;Winning Numbers Drawn In 'Daily 3' Game.&nbsp;Veterans Give Precious Gift For Christmas.&nbsp;
